fix: improve header layout & fix toggle on mobile

--- a/src/modules/_header.scss
+++ b/src/modules/_header.scss
@@ -1,5 +1,7 @@
 .header nav {
   display: flex;
+  flex-wrap: wrap;
+
   flex-direction: column;
   align-items: start;
   gap: 0.5rem;
@@ -10,15 +12,23 @@
   }
 
   ul {
-    display: flex;
+    display: none;
+    &[style*='display: block;'] {
+      display: flex !important;
+    }
+
     flex-direction: column;
     align-items: start;
     column-gap: 0.5rem;
     row-gap: 0.75rem;
 
+    margin-top: 0.5rem;
+
     @media (min-width: 600px) {
+      display: flex;
       flex-direction: row;
       align-items: center;
+      margin-top: 0;
     }
 
     list-style-type: none;
@@ -35,6 +45,11 @@
         padding: 0.15rem;
       }
     }
+  }
+
+  .search {
+    flex-basis: 100%;
+    margin: 0;
   }
 }
 
